--- a/.github/workflows/security-deploy.yml
+++ b/.github/workflows/security-deploy.yml
@@ -15,6 +15,8 @@ on:
 env:
   REGISTRY: threatmodelingacr.azurecr.io
   IMAGE_NAME: threat-modeling
+  RESOURCE_GROUP: threat-modeling-poc
+  CONTAINER_APP_NAME: threat-modeling
 
 jobs:
   codeql-analysis:
