--- a/.github/workflows/security-deploy.yml
+++ b/.github/workflows/security-deploy.yml
@@ -28,7 +28,7 @@ on:
         default: false
         
 permissions:
-  contents: read
+  contents: write
   security-events: write
   actions: read
 
@@ -156,6 +156,9 @@ jobs:
     name: Deploy to Azure Container Apps
     runs-on: ubuntu-latest
     needs: build-secure
+    permissions:
+      contents: write
+      actions: read
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
