--- a/container/requirements.txt
+++ b/container/requirements.txt
@@ -5,3 +5,10 @@ openai>=1.30.0
 requests>=2.31.0
 Pillow>=10.0.0
 PyPDF2>=3.0.0
+python-magic>=0.4.27
+python-magic-bin>=0.4.14
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.5.0
+PyJWT>=2.8.0
+python-multipart>=0.0.6
