--- a/.github/workflows/security-deploy.yml
+++ b/.github/workflows/security-deploy.yml
@@ -1,4 +1,4 @@
-name: Security Scan and Deploy
+name: Security Scan and Deploy (OIDC - No Passwords!)
 
 on:
   push:
@@ -11,7 +11,7 @@ permissions:
   contents: write
   security-events: write
   actions: read
-  id-token: write
+  id-token: write  # Required for OIDC!
 
 env:
   REGISTRY: threatmodelingacr.azurecr.io
@@ -27,14 +27,24 @@ jobs:
       contents: read
       security-events: write
       actions: read
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: github/codeql-action/init@v3
-        with:
-          languages: python
-          queries: security-and-quality
-      - uses: github/codeql-action/autobuild@v3
-      - uses: github/codeql-action/analyze@v3
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        languages: python
+        queries: security-and-quality
+    
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v3
+    
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:python"
 
   build-secure:
     name: Build and Push
@@ -43,36 +53,53 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
-      security-events: write
-      actions: read
-      id-token: write
+      security-events: write  # Required for Trivy upload
+      actions: read          # Required for SARIF upload
+      id-token: write        # Required for OIDC
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      - run: az acr login --name threatmodelingacr
-      - uses: docker/build-push-action@v5
-        with:
-          context: ./container
-          push: true
-          build-args: |
-            GIT_SHA=${{ github.sha }}
-            APP_VERSION=${{ github.ref_name }}
-          tags: |
-            threatmodelingacr.azurecr.io/threat-modeling:latest
-            threatmodelingacr.azurecr.io/threat-modeling:${{ github.sha }}
-      - uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: threatmodelingacr.azurecr.io/threat-modeling:latest
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-      - uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    # Login using OIDC - NO PASSWORDS!
+    - name: Azure Login (OIDC)
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    
+    # Login to ACR using Azure identity - NO ACR PASSWORDS!
+    - name: Login to ACR via Azure
+      run: |
+        az acr login --name threatmodelingacr
+    
+    # Build and push
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: ./container
+        push: true
+        build-args: |
+          GIT_SHA=${{ github.sha }}
+          APP_VERSION=${{ github.ref_name }}
+        tags: |
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+    
+    # Trivy scan
+    - name: Run Trivy scan
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+    
+    - name: Upload Trivy to GitHub Security
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: 'trivy-results.sarif'
 
   deploy:
     name: Deploy to Container Apps
@@ -81,15 +108,46 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: write
-      id-token: write
+      id-token: write  # Required for OIDC
+    
     steps:
-      - uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      - run: |
-          az containerapp update \
-            --name threat-modeling \
-            --resource-group threat-modeling-poc \
-            --image threatmodelingacr.azurecr.io/threat-modeling:${{ github.sha }}
+    # Login using OIDC - NO PASSWORDS!
+    - name: Azure Login (OIDC)
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    
+    # Deploy - secrets from Key Vault!
+    - name: Deploy to Container Apps
+      run: |
+        echo "🚀 Deploying..."
+        
+        az containerapp update \
+          --name ${{ env.CONTAINER_APP_NAME }} \
+          --resource-group ${{ env.RESOURCE_GROUP }} \
+          --image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        
+        echo "Deployed!"
+    
+    - name: Get App URL
+      id: get-url
+      run: |
+        FQDN=$(az containerapp show \
+          --name ${{ env.CONTAINER_APP_NAME }} \
+          --resource-group ${{ env.RESOURCE_GROUP }} \
+          --query properties.configuration.ingress.fqdn -o tsv)
+        echo "url=https://$FQDN" >> $GITHUB_OUTPUT
+    
+    - name: Post deployment comment
+      if: github.event_name == 'push'
+      uses: actions/github-script@v7
+      with:
+        script: |
+          github.rest.repos.createCommitComment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            commit_sha: context.sha,
+            body: '🚀 Deployed: ${{ steps.get-url.outputs.url }}\n🔐 Auth: GitHub OIDC\n🔑 Secrets: Key Vault\n🐳 Image: ${{ github.sha }}'
+          })
