--- a/.github/workflows/security-deploy.yml
+++ b/.github/workflows/security-deploy.yml
@@ -11,7 +11,7 @@ permissions:
   contents: write
   security-events: write
   actions: read
-  id-token: write  # Required for OIDC!
+  id-token: write
 
 env:
   REGISTRY: threatmodelingacr.azurecr.io
@@ -33,50 +33,47 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
+      uses: github/codeql-action/init@v4
       with:
         languages: python
         queries: security-and-quality
     
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
+      uses: github/codeql-action/autobuild@v4
     
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      uses: github/codeql-action/analyze@v4
       with:
         category: "/language:python"
 
-  build-secure:
-    name: Build and Push
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     needs: codeql-analysis
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
-      contents: read
-      security-events: write  # Required for Trivy upload
-      actions: read          # Required for SARIF upload
-      id-token: write        # Required for OIDC
+      contents: write
+      security-events: write
+      actions: read
+      id-token: write
     
     steps:
     - name: Checkout
       uses: actions/checkout@v4
     
-    # Login using OIDC - NO PASSWORDS!
     - name: Azure Login (OIDC)
-      uses: azure/login@v1
+      uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     
-    # Login to ACR using Azure identity - NO ACR PASSWORDS!
-    - name: Login to ACR via Azure
+    - name: Login to ACR
       run: |
         az acr login --name threatmodelingacr
     
-    # Build and push
     - name: Build and push
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       with:
         context: ./container
         push: true
@@ -87,39 +84,21 @@ jobs:
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
     
-    # Trivy scan
-    - name: Run Trivy scan
-      uses: aquasecurity/trivy-action@master
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.28.0
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         format: 'sarif'
         output: 'trivy-results.sarif'
+      continue-on-error: true
     
-    - name: Upload Trivy to GitHub Security
-      uses: github/codeql-action/upload-sarif@v3
+    - name: Upload Trivy results to GitHub Security
+      uses: github/codeql-action/upload-sarif@v4
       if: always()
       with:
         sarif_file: 'trivy-results.sarif'
-
-  deploy:
-    name: Deploy to Container Apps
-    runs-on: ubuntu-latest
-    needs: build-secure
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    permissions:
-      contents: write
-      id-token: write  # Required for OIDC
+      continue-on-error: true
     
-    steps:
-    # Login using OIDC - NO PASSWORDS!
-    - name: Azure Login (OIDC)
-      uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-    
-    # Deploy - secrets from Key Vault!
     - name: Deploy to Container Apps
       run: |
         echo "🚀 Deploying..."
@@ -129,7 +108,7 @@ jobs:
           --resource-group ${{ env.RESOURCE_GROUP }} \
           --image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         
-        echo "Deployed!"
+        echo "✅ Deployed!"
     
     - name: Get App URL
       id: get-url
@@ -149,5 +128,5 @@ jobs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             commit_sha: context.sha,
-            body: '🚀 Deployed: ${{ steps.get-url.outputs.url }}\n🔐 Auth: GitHub OIDC\n🔑 Secrets: Key Vault\n🐳 Image: ${{ github.sha }}'
+            body: '🚀 Deployed: ${{ steps.get-url.outputs.url }}\n🔐 Auth: OIDC\n🐳 Image: `${{ github.sha }}`'
           })
