--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,19 +1,12 @@
-# Multi-stage build for smaller, more secure image
-FROM python:3.11-slim as builder
+# Multi-stage build for security
+FROM python:3.11-slim AS builder
 
-# Suppress debconf warnings
-ENV DEBIAN_FRONTEND=noninteractive
-
+# Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies for python-magic
 RUN apt-get update && apt-get install -y \
     libmagic1 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install build dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
@@ -21,25 +14,22 @@ RUN apt-get update && \
 COPY requirements.txt .
 RUN pip install --no-cache-dir --user -r requirements.txt
 
-# Final stage - distroless-like slim image
+# Final stage - slim image
 FROM python:3.11-slim
 
-# Build arguments
-ARG GIT_SHA=unknown
-ARG APP_VERSION=dev
-
-# Suppress debconf warnings
-ENV DEBIAN_FRONTEND=noninteractive
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y \
+    libmagic1 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
-RUN useradd -m -u 1000 appuser && \
-    mkdir -p /app && \
-    chown -R appuser:appuser /app
+RUN useradd -m -u 1000 appuser
 
+# Set working directory
 WORKDIR /app
 
-# Copy Python dependencies from builder
-COPY --from=builder --chown=appuser:appuser /root/.local /home/appuser/.local
+# Copy installed packages from builder
+COPY --from=builder /root/.local /home/appuser/.local
 
 # Copy application code
 COPY --chown=appuser:appuser app.py .
@@ -51,6 +41,10 @@ COPY --chown=appuser:appuser start.sh .
 
 # Make startup script executable
 RUN chmod +x start.sh
+
+# Build arguments for versioning
+ARG GIT_SHA=unknown
+ARG APP_VERSION=dev
 
 # Set environment variables
 ENV PATH=/home/appuser/.local/bin:$PATH \
@@ -74,8 +68,8 @@ USER appuser
 EXPOSE 8000 8001
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/_stcore/health')" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:8000/_stcore/health')"
 
 # Run startup script
 CMD ["./start.sh"]
