--- a/.github/workflows/security-deploy.yml
+++ b/.github/workflows/security-deploy.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+    inputs:
+      deploy:
+        description: 'Deploy to production?'
+        required: false
+        type: boolean
+        default: false
 
 permissions:
   contents: write
@@ -46,11 +52,57 @@ jobs:
       with:
         category: "/language:python"
 
-  build-and-deploy:
-    name: Build and Deploy
+  build-and-scan:
+    name: Build and Scan (No Push)
     runs-on: ubuntu-latest
     needs: codeql-analysis
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Build image locally (no push)
+      uses: docker/build-push-action@v6
+      with:
+        context: ./container
+        push: false
+        load: true
+        build-args: |
+          GIT_SHA=${{ github.sha }}
+          APP_VERSION=${{ github.ref_name }}
+        tags: |
+          ${{ env.IMAGE_NAME }}:test
+    
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.28.0
+      with:
+        image-ref: ${{ env.IMAGE_NAME }}:test
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+      continue-on-error: true
+    
+    - name: Upload Trivy results to GitHub Security
+      uses: github/codeql-action/upload-sarif@v4
+      if: always()
+      with:
+        sarif_file: 'trivy-results.sarif'
+      continue-on-error: true
+
+  deploy:
+    name: Build, Push and Deploy
+    runs-on: ubuntu-latest
+    needs: codeql-analysis
+    # Only deploy on:
+    # 1. Push to main branch, OR
+    # 2. Manual trigger with deploy=true
+    if: |
+      (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy == 'true')
     permissions:
       contents: write
       security-events: write
@@ -72,7 +124,7 @@ jobs:
       run: |
         az acr login --name threatmodelingacr
     
-    - name: Build and push
+    - name: Build and push to ACR
       uses: docker/build-push-action@v6
       with:
         context: ./container
