--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,83 +1,43 @@
-# Multi-stage build for smaller, more secure image
-FROM python:3.11-slim AS builder
-
-# Suppress debconf warnings
-ENV DEBIAN_FRONTEND=noninteractive
-
-WORKDIR /app
-
-# Install build dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    gcc \
-    libmagic1 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements and install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir --user -r requirements.txt
-
-# Final stage - distroless-like slim image
 FROM python:3.11-slim
 
-# Build arguments
-ARG GIT_SHA=unknown
-ARG APP_VERSION=dev
-
-# Suppress debconf warnings
-ENV DEBIAN_FRONTEND=noninteractive
-
-# Install runtime dependencies (python-magic needs libmagic1)
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    libmagic1 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Create non-root user
-RUN useradd -m -u 1000 appuser && \
-    mkdir -p /app && \
-    chown -R appuser:appuser /app
-
+# Set working directory
 WORKDIR /app
 
-# Copy Python dependencies from builder
-COPY --from=builder --chown=appuser:appuser /root/.local /home/appuser/.local
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    curl \
+    git \
+    libxml2-dev \
+    libxslt-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy application code
-COPY --chown=appuser:appuser app.py .
-COPY --chown=appuser:appuser app_main.py .
-COPY --chown=appuser:appuser prompt_protection.py .
-COPY --chown=appuser:appuser file_security.py .
-COPY --chown=appuser:appuser api.py .
-COPY --chown=appuser:appuser start.sh .
+# Copy requirements first for better caching
+COPY requirements.txt .
 
-# Make startup script executable
-RUN chmod +x start.sh
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application files
+COPY enhanced_app.py app.py
+COPY threat_model_diagram_editor.py .
+COPY diagram_threat_integration.py .
+
+# Create necessary directories
+RUN mkdir -p /app/diagrams /app/exports
 
 # Set environment variables
-ENV PATH=/home/appuser/.local/bin:$PATH \
-    PYTHONUNBUFFERED=1 \
-    PYTHONIOENCODING=utf-8 \
-    LANG=C.UTF-8 \
-    LC_ALL=C.UTF-8 \
-    STREAMLIT_SERVER_PORT=8000 \
+ENV STREAMLIT_SERVER_PORT=8501 \
     STREAMLIT_SERVER_ADDRESS=0.0.0.0 \
     STREAMLIT_SERVER_HEADLESS=true \
-    STREAMLIT_BROWSER_GATHER_USAGE_STATS=false \
-    GIT_SHA=${GIT_SHA} \
-    APP_VERSION=${APP_VERSION} \
-    API_ENABLED=false \
-    API_PORT=8001
+    STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
 
-# Switch to non-root user
-USER appuser
-
-# Expose ports
-EXPOSE 8000 8001
+# Expose port
+EXPOSE 8501
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/_stcore/health')" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl --fail http://localhost:8501/_stcore/health || exit 1
 
-# Run startup script
-CMD ["./start.sh"]
+# Run the application
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
